--- a/src/main/resources/templates/qna/QnA.html
+++ b/src/main/resources/templates/qna/QnA.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="/static/css/community/QnA.css" />
+        <link rel="stylesheet" href="/css/qna/QnA.css" />
     </head>
     <body>
         <!-- 메인 시작 -->
@@ -1194,5 +1194,5 @@
     </body>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script src="/static/js/community/QnA.js"></script>
+    <script src="/js/qna/QnA.js"></script>
 </html>
