--- a/src/main/resources/templates/qna/header.html
+++ b/src/main/resources/templates/qna/header.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>header</title>
-        <link rel="stylesheet" href="/static/css/community/header.css" />
+        <link rel="stylesheet" href="/css/qna/header.css" />
     </head>
     <body>
 <div id="headerWrap" class="gnbTheme1200 devGnbContainer">
@@ -1037,5 +1037,5 @@
         </div>
         <div class="jkNavDimm"></div>
     </body>
-    <script src="/static/js/community/header-event.js"></script>
+    <script src="/js/qna/header-event.js"></script>
 </html>
