--- a/src/main/resources/templates/qna/update.html
+++ b/src/main/resources/templates/qna/update.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>update</title>
-    <link rel="stylesheet" href="/static/css/community/update.css">
+    <link rel="stylesheet" href="/css/qna/update.css">
 </head>
 <body>
         <!-- 네비게이션 -->
@@ -363,5 +363,5 @@
             </div>
         </div>
 </body>
-<script src="/static/js/community/update.js"></script>
+<script src="/js/qna/update.js"></script>
 </html>
