--- a/src/main/resources/templates/qna/write.html
+++ b/src/main/resources/templates/qna/write.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="/static/css/community/write.css" />
+        <link rel="stylesheet" href="/css/qna/write.css" />
     </head>
     <body>
         <!-- 네비게이션 -->
@@ -8450,5 +8450,5 @@
             </div>
         </div>
     </body>
-    <script src="/static/js/community/write-event.js"></script>
+    <script src="/js/qna/write-event.js"></script>
 </html>
