--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>main</title>
         <link rel="stylesheet" href="/static/css/main/main.css" />
-        <link rel="stylesheet" href="/static/css/community/header.css" />
+        <link rel="stylesheet" href="/css/qna/header.css" />
         <link rel="stylesheet" href="/static/css/main/footer.css" />
     </head>
     <body>
