--- a/src/main/resources/templates/qna/QnA-detail.html
+++ b/src/main/resources/templates/qna/QnA-detail.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>QnA-detail</title>
-        <link rel="stylesheet" href="/static/css/community/QnA-detail.css" />
+        <link rel="stylesheet" href="/css/qna/QnA-detail.css" />
     </head>
     <body>
          <!-- //신고 팝업 -->
@@ -1507,5 +1507,5 @@
         </div>
         <!-- 메인 끝// -->
     </body>
-    <script src="/static/js/community/QnA-detail-event.js"></script>
+    <script src="/js/qna/QnA-detail-event.js"></script>
 </html>
