--- a/src/main/resources/templates/qna/footer.html
+++ b/src/main/resources/templates/qna/footer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>footer</title>
-    <link rel="stylesheet" href="/static/css/community/footer.css">
+    <link rel="stylesheet" href="/css/qna/footer.css">
 </head>
 <body>
            <div id="footer" class="footer footer--medium">
