--- a/src/main/resources/templates/skill-log/log-write.html
+++ b/src/main/resources/templates/skill-log/log-write.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>log-write</title>
-        <link rel="stylesheet" href="/static/css/community/header.css" />
-        <link rel="stylesheet" href="/static/css/community/footer.css" />
+        <link rel="stylesheet" href="/css/qna/header.css" />
+        <link rel="stylesheet" href="/css/qna/footer.css" />
         <link rel="stylesheet" href="/static/css/skill-log/log-write.css" />
     </head>
     <body>
