write.html js, css 경로 수정

--- a/src/main/resources/templates/skill-log/log-write.html
+++ b/src/main/resources/templates/skill-log/log-write.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>log-write</title>
-        <link rel="stylesheet" href="/static/css/community/header.css" />
-        <link rel="stylesheet" href="/static/css/community/footer.css" />
-        <link rel="stylesheet" href="/static/css/skill-log/log-write.css" />
+        <link rel="stylesheet" href="/css/qna/header.css"/>
+        <link rel="stylesheet" href="/css/qna//footer.css"/>
+        <link rel="stylesheet" href="/css/skill-log/log-write.css"/>
     </head>
     <body>
         <!-- 네비게이션 -->
@@ -494,5 +494,5 @@
             </div>
         </div>
     </body>
-    <script src="../../static/js/skill-log/log-write.js"></script>
+    <script src="/js/skill-log/write/event.js"></script>
 </html>
