--- a/src/main/resources/templates/main/log-in.html
+++ b/src/main/resources/templates/main/log-in.html
@@ -13,7 +13,7 @@
             <div id="container">
                 <div class="logtop logtop_login">
                     <p class="lnb">
-                        <a href="">TRY-CATCH홈</a>
+                        <a href="/main/main">TRY-CATCH홈</a>
                     </p>
                 </div>
 
