individualMember.xml "," error issue fixed #75

--- a/src/main/resources/templates/main/individual-join.html
+++ b/src/main/resources/templates/main/individual-join.html
@@ -354,6 +354,7 @@
                             />
                         </div>
                     </div>
+                    <!--   인증 번호 solapi 사용-->
                     <div class="row authentication_check">
                         <div class="col_1">
                             <label
